# rust-benchmarks

./: .gitignore  Cargo.toml  LICENSE
benches/: compare_two_fibonacci_fns.rs  nanoid_vs_own.rs  nanoid_vs_own_bencher.rs  notes.md  pattern_builder.rs  prime_number_generator.rs  smallvec-vs-tinyvec-vs-arrayvec-glassbench.rs  smallvec-vs-tinyvec.rs  vec_structs.rs
results/: smallvec-vs-tinyvec-vs-arrayvec_glassbench.md
src/: Flyweight.rs  YakShaver.rs  YakShaverBuilder.rs  main.rs
